@startuml
title Diagrama de clases - Proyecto Resolución de Laberintos

'---------------- CLASE MAIN ----------------
class Main {
  +main(String[] args)
  -sessionActually: Session
}

'---------------- CLASE CONFIG ----------------
class Config {
  +WELCOME: String
  +GOODBYE: String
  +UNLOGGED_MENU: String
  +LOGGED_MENU: String
  +MAZES_PATH: String
  +FILE_PATH: String
  +USERS_FILE: String
  +SEARCH_PATHS_MENU: String
}

'---------------- CLASE INTERFACE ----------------
class Interface {
  +getInt(): int
  +getInt(text: String): int
  +getString(): String
  +getString(text: String): String
  +toContinue(): void
}

'---------------- CLASE USER ----------------
class User {
  -username: String
  -password: String
  -name: String
  -nif: String
  -email: String
  -address: String
  -birthdate: String
  -role: String
  +getUsername(): String
  +getName(): String
  +getEmail(): String
  ...
}

'---------------- CLASE SESSION ----------------
class Session {
  -user: User
  -logged: boolean
  +login(): boolean
  +signup(): void
  +showUser(): void
  +logout(): void
  +loggedMenu(String, String): void
  +isLogged(): boolean
  +userActualy(String, String): User
  +unloggedMenu(session: Session): void
}

'---------------- CLASE MAZE ----------------
class Maze {
  -map: char[][]
  -originalMap: char[][]
  -loaded: boolean
  -startI: int
  -startJ: int
  -endI: int
  -endJ: int
  -path: ArrayList<Coordinate>
  +loadMaze(): void
  +showMap(): void
  +setEntranceExit(): void
  +searchPaths(): void
}

'---------------- CLASE COORDINATE ----------------
class Coordinate {
  +i: int
  +j: int
  +direction: String
  +toString(): String
}

'-------- RELACIONES ENTRE CLASES --------
Main --> Session
Session --> User
Session --> Maze : usa
Maze --> Coordinate : contiene
Maze --> Interface : usa
Session --> Interface : usa
Session --> Config : usa
Main --> Config : usa

@enduml
